--- a/LabManager/appsettings.json
+++ b/LabManager/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-LabManager-E2B6F7F4-A109-455E-B98F-820AC2FE1C59;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-LabManager-E2B6F7F4-A109-455E-B98F-820AC2FE1C59;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=LabManager;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
