--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,11 +4,11 @@ phases:
 
   build:
     commands:
-      - dotnet restore EbCiTest/EbCiTest.csproj
-      - dotnet build EbCiTest/EbCiTest.csproj
-      - dotnet publish EbCiTest/EbCiTest.csproj -o ./staging/app
-      - cp ./EbCiTest/aws-windows-deployment-manifest.json ./EbCiTest/staging/.
+      - dotnet restore LabManager/LabManager.csproj
+      - dotnet build LabManager/LabManager.csproj
+      - dotnet publish LabManager/LabManager.csproj -o ./staging/app
+      - cp ./LabManager/aws-windows-deployment-manifest.json ./LabManager/staging/.
 artifacts:
   files:
     - '**/*'
-  base-directory: 'EbCiTest/staging'
+  base-directory: 'LabManager/staging'
