--- a/LabManager/aws-windows-deployment-manifest.json
+++ b/LabManager/aws-windows-deployment-manifest.json
@@ -4,7 +4,7 @@
         "aspNetCoreWeb": [{
                 "name": "CMS",
                 "parameters": {
-                    "appBundle": "./site",
+                    "appBundle": "./staging/site",
                     "iisPath": "/",
                     "iisWebSite": "Default Web Site"
                 }
