--- a/LabManager/aws-windows-deployment-manifest.json
+++ b/LabManager/aws-windows-deployment-manifest.json
@@ -4,7 +4,7 @@
         "aspNetCoreWeb": [{
                 "name": "LabManager",
                 "parameters": {
-                    "appBundle": "./staging/app",
+                    "appBundle": "./app",
                     "iisPath": "/",
                     "iisWebSite": "Default Web Site"
                 }
